Amazon/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amazon-service
  namespace: default
  labels:
    app: amazon-app
spec:
  selector:
    app: amazon-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
